# Distributed-Wavefront

./: .gitignore  CMakeLists.txt  MPI_collective_tests.sh  README.md  ff_tests.sh  sequential_tests.sh
outputs/MPI/: collective.csv
outputs/fastflow/: fastflow.csv
outputs/sequential/: sequential.csv
plotting/: MPI.py  fastflow.py  latex.py  sequential.py  utils.py
scripts/: MPI_collective_tests.sh  ff_tests.sh  run_all.sh  sequential_tests.sh
src/main/: config.hpp  utils.hpp  wavefront.hpp  wavefront_fastflow.cpp  wavefront_mpi.cpp  wavefront_mpi_collective.cpp  wavefront_mpi_p2p.cpp  wavefront_seq.cpp
src/tests/: test_correctness.cpp
